# forward_ref_generic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: assignment.rs  binary.rs  lib.rs  unary.rs
tests/: binary.rs
