[package]
name = "forward_ref_generic"
version = "0.1.5"
authors = ["Thomas Lindae <thomas.lindae@in.tum.de>"]
edition = "2021"
description = "Generically forward references for operations on Copy types."
license = "MIT"
repository = "https://github.com/Treeniks/forward_ref_generic"

[dependencies]
